# nft-lottery

./: .gitignore  Anchor.toml  README.md  package.json
programs/winto/: Cargo.toml
programs/winto/src/: lib.rs
programs/winto/src/admin/: mod.rs
programs/winto/src/admin/back_office/: assets_distribution.rs  initialize.rs  mod.rs  update_by_admin.rs  update_by_dev.rs  update_organizer_merkle_whitelist.rs  withdraw_from_pda.rs  withdraw_pda_sol.rs  withdraw_pda_token.rs
programs/winto/src/admin/bot/: airdrop_token.rs  create_user_details_by_bot.rs  mod.rs  update_user_reward.rs
programs/winto/src/globals/: constants.rs  enums.rs  errors.rs  mod.rs  states.rs  utility.rs
programs/winto/src/lottery/: mod.rs
programs/winto/src/lottery/organizer/: create_game.rs  end_game.rs  lock_wings_nft.rs  mod.rs  organizer_get_back_nft.rs  organizer_process_game_sol.rs  organizer_process_game_token.rs  recreate_game.rs  unlock_wings_nft.rs
programs/winto/src/lottery/user/: create_user_details_by_user.rs  create_user_global_bid_pda_sol.rs  create_user_global_bid_pda_token.rs  mod.rs  stake_freely_nft.rs  unstake_freely_nft.rs  user_claim_airdrop_win.rs  user_game_bid_sol.rs  user_game_bid_token.rs  user_withdraw_funds_sol.rs  user_withdraw_funds_token.rs  winner_claim_nft.rs
tests/: admin.ts  winto.ts
tests/libs/: balance-tree.ts  constant.ts
