[package]
name = "winto"
version = "0.1.0"
description = "Main winto Program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "winto"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["dev-testing"]
local-testing = []
dev-testing = []
main-net = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}
spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}